# QMK-on-zephyr

./: .gitmodules  CMakeLists.txt  Kconfig  Kconfig.qmk_on_zephyr  Makefile  README.md  prj.conf
boards/: nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
include/keyboard/: keymap.h
include/zmk/split/bluetooth/: central.h  connection.h  key_queue.h  slot.h
src/: bootloader.c  eeprom.c  eeprom_emulated_flash.c  host.c  keymap.c  keymap_introspection.c  main.c  matrix.c  protocol.c  timer.c  usb_main.c
src/phoenix_pro/: via_custom.c
src/split/: CMakeLists.txt  Kconfig
src/split/bluetooth/: CMakeLists.txt  Kconfig  central.c  connection.c  slot.c
